# itu-msc-thesis

./: .cargo  .gitignore  Cargo.toml  README.md  copy_results.sh  copy_results_to_ann.sh  create_kmeans_result.sh  create_pq_result.sh  create_result.sh  dev-docker-attach.sh  run.sh  run_all_basic.sh  run_all_basic2.sh  run_solutions.sh  thesis-env.txt
ann-benchmark-plots/: fa_kmeans_REF_0515_1253.html  fa_kmeans_REF_0515_1315.html  fa_kmeans_REF_0516_2201.html  fa_kmeans_REF_0518_0856.html  fa_pq_REF_0515_1253.html  fa_pq_REF_0515_1315.html  fa_pq_REF_0516_2201.html  fa_pq_REF_0518_0856.html  faiss-ivf.html  glove-100-angular_10_angular.html  index.html  random-xs-20-angular_10_angular.html
src/: algs.rs  bruteforce.rs  dataset.rs  datasets.rs  distance.rs  distances.rs  hdf5_example.rs  hdf5_example2.rs  lib.rs  main.rs  pixels.h5  pq.rs  running.rs  util.rs
src/algs/: base.rs  bruteforce.rs  common.rs  data_entry.rs  dataset.rs  distance.rs  fa_bruteforce.rs  fa_kmeans.rs  fa_product_quantization.rs  fa_product_quantization_simple.rs  fa_scann.rs  fa_scann_kmeans.rs  fa_scann_matrices.rs  fa_scann_util.rs  kmeans.rs  linearsearch.rs  pq.rs  pq_common.rs  pq_data_entry.rs  pq_inverted_index.rs  pq_kmeans.rs  pq_residuals_kmeans.rs  product_quantization.rs  scann.rs  scann_common.rs  scann_impl.rs  scann_kmeans.rs
src/distances/: cosine_similarity.rs  euclidian.rs
src/not_used/: bruteforce.rs
src/util/: bruteforce_basic.hdf5  dataset.rs  debug_timer.rs  hdf5_attributes_fix.py  hdf5_attributes_fix.rs  hdf5_attributes_fix_dir.py  hdf5_attributes_fix_single.py  hdf5_python_attributes_fix.rs  hdf5_store_file.rs  sampling.rs  testcases.rs
(+6 files in other folders)
