[package]
name = "itu-msc-thesis"
version = "0.1.0"
authors = ["fand <fand@itu.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = "0.7.1"
ndarray = "0.14.0"
priority-queue = "1.0.5"
min-max-heap = "1.3.0"
binary-heap-plus = "0.4.1"