[package]
name = "itu-msc-thesis"
version = "0.1.0"
authors = ["fand <fand@itu.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = "0.7.1"
ndarray = "0.14.0"
rand = "0.8.3"
colored = "2.0.0"
ordered-float = "2.0"
assert_float_eq = "1"

[lib]
name = "hdf5_attribute_fix"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["auto-initialize"]
