[package]
name = "itu-msc-thesis"
version = "0.1.0"
authors = ["fand <fand@itu.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.14.0", features = ["serde", "rayon"] }
rand = "0.8.3"
rand_core = "0.6.2"
colored = "2.0.0"
ordered-float = "2.2"
assert_float_eq = "1.1"
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.5.0"
serde = { version = '1.0', features = ['derive'] }
bincode = "1.3.3"
approx = { version = "0.4.0", features = ["num-complex"] }
pyo3 = {version = "0.14.1", features = ["auto-initialize"]}
hdf5 = "0.7.1"
sys-info = "0.9.0"

[lib]
name = "hdf5_attribute_fix"
crate-type = ["cdylib"]

[profile.release]
debug = true